--- a/src/css/game.css
+++ b/src/css/game.css
@@ -81,10 +81,10 @@ a#audioToggle {
 }
 
 .third h2 {
-    text-transform: uppercase;
-    color: #bbbbbb;
-    font-size: 16px;
-    line-height: 1.2em;
+    /*text-transform: uppercase;*/
+    color: #FFFFFF;
+    font-size: 20px;
+    line-height: 1.5em;
     margin-bottom: 10px;
 }
 
@@ -109,7 +109,7 @@ p#level {
 }
 
 .third .level h4 {
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     color: #ffffff;
     letter-spacing: 1px;
     text-shadow: 0px 3px 0px rgba(170, 67, 67, 1);
